add date into post titles

--- a/content/post/2021-04-16-env206.md
+++ b/content/post/2021-04-16-env206.md
@@ -1,7 +1,7 @@
 +++
 date = "2021-04-16"
 short_text = "Zheng, Bailiang, and Zifei came back from the last field trip for ENV206, ever."
-title = "Field trip of ENV206"
+title = "[2021-04-16] Field trip of ENV206"
 [[authors]]
     id = "Zhao.Peng"
 
