--- a/content/post/2021-04-16-website.md
+++ b/content/post/2021-04-16-website.md
@@ -1,7 +1,7 @@
 +++
 date = "2021-04-16"
-short_text = "Begun the HES website has."
-title = "[2021-04-16] HES website"
+short_text = "Begun, the HES website has."
+title = "[2021-04-16] HES website launched"
 [[authors]]
     id = "Zhao.Peng"
 +++
