--- a/content/post/2021-04-16-env206.md
+++ b/content/post/2021-04-16-env206.md
@@ -2,6 +2,7 @@
 date = "2021-04-16"
 short_text = "Zheng, Bailiang, and Zifei came back from the last field trip for ENV206, ever."
 title = "[2021-04-16] Field trip of ENV206"
+image = "camera/env206_small.jpg"
 [[authors]]
     id = "Zhao.Peng"
 
@@ -10,3 +11,5 @@ title = "[2021-04-16] Field trip of ENV206"
 Zheng, Bailiang, and Zifei came back with the ENV206 students. Well done! 
 
 And farewell, field trip ENV206.
+
+![](../../img/camera/env206.jpg)
