--- a/content/post/projects.Rmd
+++ b/content/post/projects.Rmd
@@ -8,5 +8,6 @@ authors:
 ```{r, echo=FALSE}
 source("../../R/functions.R")
 project <- read_mdtable(mdfile = "../../static/database/project.md", skip = 0)
-DT::datatable(project)
+project$PI <- convert_id2link(staff_id = project$PI)
+DT::datatable(project, escape = FALSE)
 ```
