--- a/content/post/module.Rmd
+++ b/content/post/module.Rmd
@@ -13,4 +13,93 @@ module$Involved <- convert_id2link(staff_id = module$Involved)
 DT::datatable(module, escape = FALSE)
 ```
 
-[See more modules](https://www.xjtlu.edu.cn/en/study/undergraduate/environmental-science).
+## OVERVIEW
+
+The BSc in Environmental Science programme gives you an understanding of the natural world and environmental problems caused by development. The programme combines biology, chemistry, earth sciences, mathematical, statistical and GIS methods into one subject. Specialized teams of experts work in biogeochemistry and environmental chemistry; soil, plant and animal ecology; and physical geography and geomorphology.
+
+You will learn to apply problem-solving skills to some of the greatest challenges facing humanity today. Furthermore, you will gain field skills through participating in international field trips in coastal and mountain environments, learning about surveying and interviewing key community stakeholders.
+
+### WHY SHOULD I STUDY ENVIRONMENTAL SCIENCE AT XJTLU?
+
+- Use a hands-on approach to learn the science of environmental processes at a range of scales, from local and regional to national and global
+- Gain knowledge from research-led teaching with emphasis on research in areas where humanity faces severe challenges, such as biodiversity loss, climate change and disruption of the earth’s chemical cycles
+- Uncover the complexities in environmental decision-making and discover ways to engage in environmental management as you gain insights from industry leaders and non-governmental organizations
+- Take advantage of new purpose-built laboratories (20 million RMB) designed to support lab practicals and undergraduate research and learn sophisticated laboratory techniques and data analysis, such as use of Geographical Information Systems
+- Earn two degrees: an XJTLU degree from the Chinese Ministry of Education and a globally recognized degree from the University of Liverpool, a member of the Russell Group of leading UK universities.
+
+### Program info
+
+- **SCHOOL**: [School of Science](https://www.xjtlu.edu.cn/en/study/departments/school-of-science)
+- **ATTENDANCE**: Full time
+- **DURATION**: Three or four years
+- **PROSPECTUS**: [Download file (This link opens in a new window)](https://www.xjtlu.edu.cn/en/assets/files/flyer/2021/BSC-Environmental-Science.pdf)
+- **2+2 STUDY** Available
+- **LOCATION**: Suzhou
+- **QUALIFICATION**: 
+  - **XJTLU** BSc Environmental Science
+  - **University of Liverpool** BSc Environmental Science [More about qualifications](https://www.xjtlu.edu.cn/en/study/why-study-at-xjtlu/degree-types)
+
+## KNOWLEDGE AND SKILLS
+
+By the time you graduate from the BSc in Environmental Science, you will have:
+
+- problem-solving competencies across the major programme focus areas of ecological, geophysical and chemical systems
+- the ability to demonstrate a high degree of scientific literacy, including an understanding of how scientific knowledge is constructed in the programme focus areas
+- a firm grasp of fundamental and applied scientific perspective and a proficiency in laboratory- and field-based analysis
+- the ability to communicate to scientists and the public about regional and global issues and their relationship to society from a scientific perspective, promoting multicultural understanding of environmental issues and their importance.
+
+
+
+![img](https://www.xjtlu.edu.cn/en/assets/image-cache/images/staff/Johannes-Knopsph.f985e357.jpg)
+
+> China is one of the leading countries aiming for a goal of achieve sustainable development. The Environmental Science programme equips you with a global outlook on studying both the natural and human modified environments and equips you with the skills to tackle environmental issues in China and beyond.
+>
+> --- Johannes Knops (Programme director)
+
+## MODULES
+
+- ### Year One
+
+  UK degrees are three years long whereas in China they are four, therefore we do accept students with certain qualifications directly into Year Two, which is the start of the main academic programme. Most students, however, enter into [Year One](https://www.xjtlu.edu.cn/en/study/why-study-at-xjtlu/year-one), which provides you with a range of interesting modules, language classes and core skills for your degree.
+
+- ### Year Two
+
+  - [Biodiversity of Animals, Plants & Microbes](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=BIO101)
+  - [Research and GIS Skills](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV101)
+  - [Introduction to Planet Earth](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV104)
+  - [Environmental Chemistry](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV105)
+  - [Ecology and Conservation](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV102)
+  - [Aquatic Field Skills](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV106).
+  - [Dynamic Landscapes](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV108)
+  - [Environmental Pollution](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV110).
+
+- ### Year Three
+
+  - [Environmental Sustainability I](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=UPD201)
+  - [Statistics for Environmental Scientists](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV203)
+  - [Environmental Change: Past, Present & Future](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV205)
+  - [Soils and the Environment](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV207)
+  - [Research Design](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV201)
+  - [Spatial modelling with GIS and Remote Sensing](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV204)
+  - [Environmental Science Field Skills](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV206)
+  - [Aquatic and Urban Ecology](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV208).
+
+- ### Year Four
+
+  - [Final Year Project](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV301)
+  - [Environmental Remediation and Rehabilitation Field Class](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV313)
+  - [Fluvial Systems: from headwaters to the coast](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV309)
+  - [Environmental Management](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV311)
+  - [Ecology in a changing world](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV306)
+  - [Agriculture, Food and Environment](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV308)
+  - [Environmental Impact Assessment](http://modules.xjtlu.edu.cn/MOD_CAT.aspx?mod_code=ENV312)
+
+![](https://www.xjtlu.edu.cn/en/assets/image-cache/images/students/profiles/yijin-james-guo.e31b7fee.jpg)
+
+> I love the learning environment in our department and our opportunities are enhanced by interactive teaching, good lab equipment, field trips, and social activities.
+>
+> Yijin (James) Guo (Student, BSc Environmental Science, China)
+
+## CAREERS
+
+More than 90% of graduates pursue further MS and/or PhD education at top ranked international Universities. Graduates from this programme will be well-prepared for positions such as environmental consultant, governmental policy maker, environmental impact assessment specialist, laboratory scientist, geographic information systems analyst, ecosystem restoration engineer, environmental education officer, green technology specialist, nature conservation officer, waste management officer and waste quality scientist.
