--- a/content/post/alumni.zh.Rmd
+++ b/content/post/alumni.zh.Rmd
@@ -5,9 +5,17 @@ authors:
   - id: Zhao.Peng
 ---
 
+```{r, include=FALSE}
+Sys.setlocale("LC_CTYPE", "Chinese")
+```
+
 ```{r, echo=FALSE}
 source("../../R/functions.R")
 alumni <- read_mdtable(mdfile = "../../static/database/alumni.md", skip = 0)
-alumni$Supervisor <- convert_id2link(staff_id = alumni$Supervisor)
-DT::datatable(alumni, escape = FALSE)
+alumni$Supervisor <- convert_id2link(staff_id = alumni$Supervisor, language = "zh")
+alumni <- alumni[, c("Name_zh", "Position_zh", "Enter", "Leave", "Supervisor", "Currently_zh")]
+
+DT::datatable(alumni, escape = FALSE, 
+              colnames = c("姓名", "身份", "加入时间", "离开时间", "导师", "目前状况"),
+              options = list(lengthMenu = c(nrow(alumni), 5, 10)))
 ```
