--- a/content/post/students.zh.Rmd
+++ b/content/post/students.zh.Rmd
@@ -1,9 +1,27 @@
-+++
-short_text = "We are still here."
-title = "博士生"
-[[authors]]
-    id = "Zhao.Peng"
-+++
+---
+short_text: "We are still here."
+title: "博士生"
+authors:
+  - id: "Zhao.Peng"
+---
+
+
+```{r, include=FALSE}
+Sys.setlocale("LC_CTYPE", "Chinese")
+```
+
+```{r, echo=FALSE}
+source("../../R/functions.R")
+students <- read_mdtable(mdfile = "../../static/database/students.md", skip = 0)
+students$Supervisor <- convert_id2link(students$Supervisor, language = "zh")
+students <- students[order(students$Name), c("Name_zh", "Contact", "Enter", "Supervisor")]
+row.names(students) <- 1:nrow(students)
+colnames(students) <- c("姓名", "联系方式", "入学时间", "导师")
+DT::datatable(students, escape = FALSE, 
+              colnames = c("姓名", "联系方式", "入学时间", "导师"),
+              options = list(lengthMenu = c(nrow(students), 5, 10)))
+```
+
 
 ## 宁清钱
 
