--- a/content/post/postgraduates.Rmd
+++ b/content/post/postgraduates.Rmd
@@ -11,160 +11,20 @@ source("../../R/functions.R")
 students <- read_mdtable(mdfile = "../../static/database/students.md", skip = 0)
 students$Supervisor <- convert_id2link(students$Supervisor)
 students <- students[order(students$Name), ]
+students$Name_txt <- students$Name
+students$Name <- paste0('<a href="#', students$ID, '">', students$Name, '</a>')
+students <- students[students$Exit == "/", ]
 row.names(students) <- 1:nrow(students)
 DT::datatable(students[, c("Name", "Contact", "Entry", "Supervisor")], escape = FALSE, 
               options = list(lengthMenu = c(nrow(students), 5, 10)))
 ```
 
-## QINGQIAN NING
-
-<img src="https://www.xjtlu.edu.cn/assets/images/students/qingqian-ning.jpg" width="20%" style="display: block; margin: auto;">Qingqian's current PhD project is to study the impact of fence configuration on fence-dune interaction. Qingqian has an MSc in Water and Environmental Engineering and a BEng in Hydraulics.
-
-Email: [Qingqian.Ning@xjtlu.edu.cn](mailto:Qingqian.Ning@xjtlu.edu.cn)
-
-## MAEDE FAGHIHINIA
-
-<img src="https://www.xjtlu.edu.cn/assets/images/students/maede-faghihinia.jpg" width="20%" style="display: block; margin: auto;">Maede received her MSc degree in Natural Resources Engineering from Shiraz University, Iran.
-
-Her current project aims to understand the response of arbuscular mycorrhizal fungal communities under different land management regimes, the impact on soil carbon fluxes, and the resulting net carbon sequestration or loss. This will be assessed in a longterm field experiment (>10 yrs) by 13C-CO2 pulse chase labelling experiment. Furthermore, laboratory experiments will be performed on monoliths taken from the site to quantify how the different systems respond to drought imposition.
-
-Email: [Maede.Faghihinia@xjtlu.edu.cn](mailto:maede.faghihinia@xjtlu.edu.cn)
-
-## JINING LI
-
-<img src="https://www.xjtlu.edu.cn/assets/images/students/JiningLi.jpg" width="20%" style="display: block; margin: auto;">
-
-Her current research focuses on mental health among elderly in China.
-
-Email: [Jining.Li@xjtlu.edu.cn](mailto:Jining.Li@xjtlu.edu.cn)
-
-
-
-## SHANXING GONG
-
-<img src="https://www.xjtlu.edu.cn/assets/images/students/Shanxing-Gong.jpg" width="20%" style="display: block; margin: auto;">I got my bachelor degree on Huazhong Agricultural University, in Wuhan, China. My undergraduate major is plant protection, which is about integrated pest management (IPM). My final project of my bachelor degree is about physical pest control. I got my master degree on State University of New York at Stony Brook (i.e. Stony Brook University, SBU). My major is Ecology and Evolution. My capstone of my master degree is a meta-analysis about wetland restoration.
-
-My main research project of my PhD program is “The impact of changing landscapes on arthropod diversity and biological pest control in agro-ecosystem”.
-
-Email: [Shanxing.Gong19@student.xjtlu.edu.cn](mailto:Shanxing.Gong19@student.xjtlu.edu.cn)
-
-## XIAOYU SHI
-
-<img src="https://www.xjtlu.edu.cn/assets/images/students/Xiaoyu-Shi.jpg" width="20%" style="display: block; margin: auto;">Xiaoyu Shi received his undergraduate degree in Environmental Science from Xi'an Jiaotong-Liverpool University and his Master degree in Geography from University College London (UK).
-
-His current research focuses on both pollinator conservation and stressors on wild pollinator in China.
-
-Email: [Xiaoyu.Shi18@student.xjtlu.edu.cn](mailto:Xiaoyu.Shi18@student.xjtlu.edu.cn)
-
-## MIAO QINGTIAN
-
-<img src="https://www.xjtlu.edu.cn/assets/images/students/Miao-Qingtian.jpg" width="20%" style="display: block; margin: auto;">Qingtian received the MSc Global China Studies from The Hong Kong University of Science and Technology and BSc International Hospitality Management from Ecole hôtelière de Lausanne in Switzerland.
-
-Her current study is “The international Accomplishment of Credibility in Chinese Health Care Settings”. The research aims to study patient credibility as a reporter of symptoms at the Emergency Departments and its practical consequences.
-
-Email: [Qingtian.Miao19@student.xjtlu.edu.cn](mailto:Qingtian.Miao19@student.xjtlu.edu.cn)
-
-## QIAOYAN LIN
-
-<img src="https://www.xjtlu.edu.cn/assets/images/students/Qiaoyan-Lin.jpg" width="20%" style="display: block; margin: auto;">Qiaoyan Lin received her undergraduate in Ecology from Anhui Agriculture University and her master degree in Global Change Ecology from Northwest Institute of Plateau Biology, Chinese Academy of Sciences.
-
-Her current research topic is to study the integrated ecological restoration strategy to restore degraded aquatic ecosystems, and investigate the recovery of benthic community (microbial and macroinvertebrate community) and ecosystem functioning to aquatic ecosystem restoration.
-
-Email: [Qiaoyan.lin@xjtlu.edu.cn](mailto:Qiaoyan.lin@xjtlu.edu.cn)
-
-## LUKAS FLORIAN MELDAU
-
-<img src="https://www.xjtlu.edu.cn/assets/images/students/Lukas-Florian-Meldau.jpg" width="20%" style="display: block; margin: auto;">Lukas received his MSc degree in “Geography: Resource Analysis and Resource Management“ and his BSc degree in Geography from the Georg-August-University Göttingen, Germany.
-
-His research aims to study the effects of atmospheric stability on aeolian transport. The objective is to investigate the effects of thermal and sedimentological stratification on wind fields and Aeolian transport using wind tunnel simulations and to strengthen the understanding of the two phase flow theory.
-
-Email: [L.Meldau19@student.xjtlu.edu.cn](mailto:L.Meldau19@student.xjtlu.edu.cn)
-
-## ANJUMUNNISA
-
-<img src="https://www.xjtlu.edu.cn/assets/images/students/Anjumunnisa.jpg" width="20%" style="display: block; margin: auto;">Anjum received her undergraduate degree in Bachelor of Medicine & Bachelor of Surgery, and her masters degree in Pediatric Medicine. After training at the First affiliated Hospital and the Children’s Hospital of Soochow University, she is now pursuing a PhD in Public Health from UoL at XJTLU’s Dept. of Health and Environmental Sciences.
-
-Her current research involves a clinical trial set at the hematology ward of the Children’s Hospital in Suzhou, focusing on the well-being of children and families effected by childhood cancer.
-
-Email: [Anjumunnisa.M@xjtlu.edu.cn](mailto:Anjumunnisa.M@xjtlu.edu.cn)
-
-## ALEX DENTON
-
-<img src="https://www.xjtlu.edu.cn/assets/images/students/Alex-Denton.jpg" width="20%" style="display: block; margin: auto;">Alex received his bachelors in zoology from Swansea University, before obtaining an MSc in Conservation and Biodiversity from the University of Exeter. Prior to embarking on a PhD programme of study at XJTLU, he lectured in the United Kingdom, and worked for a number of organisations across South Africa conducting ecological research and educational outreach.
-
-His current project focuses on invertebrate community ecology, investigating interactions between grassland caterpillars (Gynaephora) and the grazers of the Qinghai-Tibetan Plateau.
-
-Email: [A.Denton19@student.xjtlu.edu.cn](mailto:A.Denton19@student.xjtlu.edu.cn)
-
-## BOKUN SUN
-
-<img src="https://www.xjtlu.edu.cn/assets/images/students/Bokun-Sun%20.jpg" width="20%" style="display: block; margin: auto;">Bokun received his undergraduate degree in Electrical Engineering from both XJTLU and University of Liverpool and his Master degree in Environmental and Energy Engineering from University of Sheffield.
-
-His current research focuses on effect of urban shrubs on PM2.5 dry deposition under different meteorological conditions.
-
-Email: [Bokun.Sun19@student.xjtlu.edu.cn](mailto:Bokun.Sun19@student.xjtlu.edu.cn)
-
-## SHA ZHANG
-
-<img src="https://www.xjtlu.edu.cn/assets/images/students/Sha-Zhang.jpg" width="20%" style="display: block; margin: auto;">Sha received his first MSc in the area of Environmental Science from Institute of Soil Science, Chinese Academy of Sciences, and the second MSc in the area of Plant Sciences from University of Delaware, the United States, and BS in Environmental Engineering from Henan University of Technology.
-
-Sha focus on the biogeochemistry of toxic elements such as arsenic and cadmium under changing environment. To broaden understanding of elemental behaviors and drives in different scales multiple techniques and methods are used to estimate the impacts of environmental disturbances.
-
-Email: [Sha.Zhang19@student.xjtlu.edu.cn](mailto:Sha.Zhang19@student.xjtlu.edu.cn)
-
-## DAN LI
-
-<img src="https://www.xjtlu.edu.cn/assets/images/students/dan-li.jpg" width="20%" style="display: block; margin: auto;">**Supervised by Pro. Johannes M H Knops**
-
-I obtained a BSc in Geographic Information System (GIS) from Suzhou University of Science and Technology, China, and a MSc in Urban Planning from Xi’an Jiaotong-Liverpool University, China. It opened up and horizon and sharpened my skills especially in areas like data structures and computational techniques to capture, represent, process, and analyze geographic information, and cultivated my ability to think rationally about the comprehensive integration of society, economy and ecology from a diversified perspective.
-
-After graduating, I continued to stay at the XJTLU university research center, Urban and Environmental Research Center. Through one year of work experience to study the sustainable development and environmental issues of the city, using my academic background to explore the relationship and balance between environmental ecology and social development, I have better understood the progress and difficulties of social development.
-
-Now my PhD project is “Trade-offs and synergies between biodiversity conservation and human ecosystem services”. The research aims to spatially quantifying variations in geophysical features, biodiversity, current land use, and current services provided to humans.
-
-## YU ZENG
-
-<img src="https://www.xjtlu.edu.cn/assets/images/students/yu-zeng.jpg" width="20%" style="display: block; margin: auto;">**Supervised by Dr. Emilio Pagani Nunez**
-
-I obtained my BSc in Wildlife and Natural Reserve Management and MSc in Zoology from the Northeast Forestry University of Harbin (Heilongjiang, China). I mainly investigated bird behavior and morphology with a particular emphasis on bird songs. I conducted a playback experiment using local and migrant male songs of Marsh Grassbirds to analyze the response intensity of their migratory populations. I also conducted research on sex identification of Light-vented Bulbul and Collared Finchbill using morphology and DNA test.
-
-My PhD project is “Urbanization and community structure: The impact of habitat transformation on competition and predation in avian assemblages". This research aims to study how habitat transformation affects interactions and competition between different bird species and predation rates from birds to insects.
-
-## SHUCHANG LIU
-
-<img src="https://www.xjtlu.edu.cn/assets/images/students/shuchang-liu.png" width="20%" style="display: block; margin: auto;">**Supervised by Dr. Zhengfeei Ma**
-
-I received my Bachelor of Engineering from Wuhan Polytechnic University in China. My major for my bachelor’s degree was in Food Science and Engineering.
-
-I obtained my Master of Science from University of Nottingham in UK. My concentration for my master’s degree is in Nutritional Sciences. My capstone project for my master’s degree was “Investigate the daily milk tea consumption in China and explore a potential healthier recipe”.
-
-My main project for my PhD is “Iodine Status of Chinese Pregnant and Lactating Women and Their Infants”.
-
-## ETIENNE JAIME
-
-<img src="https://www.xjtlu.edu.cn/assets/images/students/Etienne-Jaime.jpg" width="20%" style="display: block; margin: auto;">**Supervised by Dr. Stephen Pan**
-
-I received my Bachelor in Science from the University of Texas Pan-American (now UTRGV) in Edinburg, Texas. My major for my bachelor’s degree was in Biological and Biomedical Sciences. I additionally completed two minors in Chemistry and French.
-
-I obtained my Master of Public Health from the University of North Texas – Health Science Center in Fort Worth, Texas. My concentration for my master’s degree is in Behavioral and Community Health with a specialization in Global Health. My capstone project for my master’s degree was conducting a barriers analysis in condom utilization and developing a Zika Virus Prevention intervention using a Community Based Participatory Research approach and Care Groups methodology. My project was funded through a grant by USAID.
-
-My main project for my PhD is “Prosocial behavior to improve mental and sexual health outcomes among college students, and mediating cultural factors”.
-
-## YUJIA CAI
-
-<img src="https://www.xjtlu.edu.cn/assets/images/students/Yujia-Cai.jpg" width="20%" style="display: block; margin: auto;">
-
-**Education Background**:
-Yujia got a bachelor degree on Shenzhen University in Shenzhen, China. Her undergraduate major is Environmental Engineering. Her final project of her bachelor degree was about the distribution of persistent organic pollutants (POPs).
-She got a master degree in Environmental Engineering in Research Center for Eco-Environmental Science, Chinese Academy of Science in Beijing, China. Her master research was about the transformation and fate of soil nitrate using molecular biological techniques.
-
-**Research Project:**
-Yujia's research project of the PhD program is “Remediation of Organic Polluted Soil: Double Effects of Microbial Fuel Cells and Water Management”.
-
-## SIHAO CHEN
-
-<img src="https://www.xjtlu.edu.cn/assets/images/students/Sihao-Chen.jpg" width="20%" style="display: block; margin: auto;">
-
-Sihao Chen is a Ph.D. candidate working at the intersection of urban theory, ecological evolution theory, geography, and science and technology studies. His current research focuses on the impact of urbanization on a significant biological and ecological indicator, the Barn Swallow (Hirundo rustica). Sihao's doctoral research is supported by the Postgraduate Research Scholarship of XJTLU and the NSFC.
-
-He holds a Bachelor of Landscape Architecture from Tianjin Chengjian University in Tianjin ('17), and a Masters of Landscape Architecture from SEDRD, University of Guelph, Canada ('20). During academic terms at University of Guelph, Sihao has worked as a Graduate Teaching Assistant and Sessional Lecturer for SEDRD and Ontario Agricultural College. Before starting his Ph.D., he worked for three years (PT&FT) as an urban planner and landscape architect in collaboration with local municipalities, NGOs, and international agencies both in China and Canada.
+```{r, echo = FALSE, results='asis'}
+for (i in 1:nrow(students)){
+  cat('## ', students$Name_txt[i], '<a name="', students$ID[i], '"></a>', ' \n\n',
+      '<img src="../../img/students/', students$ID[i], '.jpg" style="display: block; margin: auto;">', '\n\n',
+      'Contact: ', students$Contact[i], '.\n\n',
+      'Supervised by ', students$Supervisor[i], '.\n\n',
+      students$Intro[i], '\n\n', sep = '')
+}
+```
