--- a/content/post/postgraduates.Rmd
+++ b/content/post/postgraduates.Rmd
@@ -23,7 +23,7 @@ DT::datatable(students[, c("Name", "Contact", "Entry", "Supervisor")], escape = 
 for (i in 1:nrow(students)){
   cat('## ', students$Name_txt[i], '<a name="', students$ID[i], '"></a>', ' \n\n',
       '<img src="../../img/students/', students$ID[i], '.jpg" style="display: block; margin: auto;">', '\n\n',
-      'Contact: ', students$Contact[i], '.\n\n',
+      'Contact: ', students$Contact[i], '\n\n',
       'Supervised by ', students$Supervisor[i], '.\n\n',
       students$Intro[i], '\n\n', sep = '')
 }
