--- a/content/project/p201905.md
+++ b/content/project/p201905.md
@@ -4,11 +4,9 @@ description = ""
 external_link = ""
 image = ""
 picture = ""
-project_id = "p003"
-short_description = "PGRS 2019 Zou"
+project_id = "p201905"
+short_description = "XJTLU PGRS"
 title = "The impact of changing landscapes on arthropod diversity and biological pest control in agro-ecosystem"
 [[participants]]
     id = "Zou.Yi"
 +++
-
-Status: in progress
