--- a/content/project/p201905.zh.md
+++ b/content/project/p201905.zh.md
@@ -4,11 +4,9 @@ description = ""
 external_link = ""
 image = ""
 picture = ""
-project_id = "p003"
-short_description = "博士生科研奖学金项目（PGRS 2019 邹）"
+project_id = "p201905"
+short_description = "西交利物浦大学 PGRS"
 title = "景观变化对农田节肢动物多样性以及生物防治的影响"
 [[participants]]
     id = "Zou.Yi"
 +++
-
-Status: in progress
