--- a/content/project/p202101.md
+++ b/content/project/p202101.md
@@ -4,15 +4,15 @@ description = ""
 external_link = ""
 image = ""
 picture = ""
-project_id = "p001"
-short_description = "博士生科研奖学金项目（PGRS 2021 韩）"
-title = "大气颗粒物表面吸附的有机塑料添加剂的降解"
+project_id = "p202101"
+short_description = "PGRS 2021 HAN"
+title = "Degradation of organic plastic additives adsorbed on particulate particles in the atmosphere"
 [[participants]]
     id = "Han.Lei"
 [[participants]]
     id = "Zhao.Peng"
 [[participants]]
-    name = "王旻昊"
+    name = "WANG, Minhao"
 +++
 
 Status: in progress
