--- a/content/project/p202102.zh.md
+++ b/content/project/p202102.zh.md
@@ -4,9 +4,9 @@ description = ""
 external_link = ""
 image = ""
 picture = ""
-project_id = "p002"
-short_description = "SURF 2021 ZHAO"
-title = "Development of an automatic controlling module for greenhouse gas online measurements"
+project_id = "p202102"
+short_description = "本科生暑期科研项目(SURF 2021 赵)"
+title = "一种在线自动切换气路的温室气体测量系统"
 [[participants]]
     id = "Zhao.Peng"
 [[participants]]
