--- a/content/project/p202101.zh.md
+++ b/content/project/p202101.zh.md
@@ -1,18 +1,18 @@
 +++
-date = "2021-01-01"
+date = "2020-01-01"
 description = ""
 external_link = ""
 image = ""
 picture = ""
-project_id = "p001"
-short_description = "PGRS 2021 HAN"
-title = "Degradation of organic plastic additives adsorbed on particulate particles in the atmosphere"
+project_id = "p202004"
+short_description = "博士生科研奖学金项目（PGRS 2020 韩）"
+title = "大气颗粒物表面吸附的有机塑料添加剂的降解"
 [[participants]]
     id = "Han.Lei"
 [[participants]]
     id = "Zhao.Peng"
 [[participants]]
-    name = "WANG, Minhao"
+    name = "王旻昊"
 +++
 
 Status: in progress
