--- a/content/project/p202001.md
+++ b/content/project/p202001.md
@@ -8,5 +8,5 @@ project_id = "p202001"
 short_description = "XJTLU PGRS"
 title = "Urbanization and community structure: the impact of habitat transformation on competition and predation in avian assemblages"
 [[participants]]
-    id = "Nunez.Pagani.Emilio"
+    id = "Pagani-Nunez.Emilio"
 +++
