--- a/content/project/p202001.zh.md
+++ b/content/project/p202001.zh.md
@@ -8,5 +8,5 @@ project_id = "p202001"
 short_description = "西交利物浦大学 PGRS"
 title = "城市化与群落结构: 生境变化对鸟类群落竞争与捕食的影响"
 [[participants]]
-    id = "Nunez.Pagani.Emilio"
+    id = "Pagani-Nunez.Emilio"
 +++
