--- a/content/project/p201801.md
+++ b/content/project/p201801.md
@@ -8,5 +8,5 @@ project_id = "p201801"
 short_description = "NSFC General Program"
 title = "The impact of urbanization on genotypes and phenotypes of Barn Swallows"
 [[participants]]
-    id = "Nunez.Pagani.Emilio"
+    id = "Pagani-Nunez.Emilio"
 +++
