--- a/content/project/p201801.zh.md
+++ b/content/project/p201801.zh.md
@@ -8,5 +8,5 @@ project_id = "p201801"
 short_description = "国家自然科学基金 （面上项目）"
 title = "城市化对家燕表型和遗传的影响"
 [[participants]]
-    id = "Nunez.Pagani.Emilio"
+    id = "Pagani-Nunez.Emilio"
 +++
